# django-utk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codestyle-checks.yml  publish-package.yml  run-tests-main.yml  tests-main.yml
django_utk/: __init__.py
django_utk/db/fields/: __init__.py  created_at.py  updated_at.py
django_utk/db/models/: __init__.py  base.py  meta.py  utils.py
django_utk/misc/: __init__.py  singleton.py
django_utk/tests/: rand.py  run_n_times.py  utils.py
django_utk/tests/factories/: __init__.py  factories.py
django_utk/tests/faker/: __init__.py  base.py  byteslike.py  choices.py  hashes.py  iterable.py  numeral.py  numeric.py  ranges.py  sequences.py  strings.py  uuid.py
django_utk/tests/utils/: __init__.py
django_utk/utils/: args.py  env.py  importutil.py  inspect.py  lazy.py  popattr.py  typehint.py
django_utk/validators/: __init__.py  base.py  hashes.py  uuid.py
docs/: BUILD.md
requirements/: dev-requirements.txt  tests-requirements.txt
testcase/test_project/: django_utk
testcase/test_project/common/: abc.py
tests/: test__tests_factories_Factory.py  test__tests_factories__Factory.py  test__tests_faker.py  test__tests_faker__byteslike.py  test__tests_faker__choices.py  test__tests_faker__iterable.py  test__tests_faker__numeric.py  test__tests_faker__randint.py  test__tests_faker__strings.py  test__tests_run_n_times.py  test__utils__typehint.py  test__utils_lazy.py  test__validators__hashes.py  test__validators__uuid.py  tests__tests_faker__randstring.py  tests__tests_faker__sequences.py
(+38 files in other folders)
